bug de repetição no back image

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   margin-bottom: 20px;
 }
 
-.image {
+.principal {
   background-image: url(img/me6.png);
   background-size: 319px 280px;
   background-repeat: no-repeat;
